k8s_manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-backend
  labels:
    app: devops-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-backend
  template:
    metadata:
      labels:
        app: devops-backend
    spec:
      containers:
      - name: devops-backend
        image: backend:midsem  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: devops-backend-service
spec:
  selector:
    app: devops-backend
  ports:
  - protocol: TCP
    port: 5000       # Service port
    targetPort: 5000 # Container port
  type: ClusterIP
