k8s_manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-frontend
  labels:
    app: devops-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-frontend
  template:
    metadata:
      labels:
        app: devops-frontend
    spec:
      containers:
      - name: devops-frontend
        image: frontend:midsem  
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devops-frontend-service
spec:
  selector:
    app: devops-frontend
  ports:
  - protocol: TCP
    port: 80        # Service port
    targetPort: 80  # Container port
  type: NodePort
