k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsbox-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false" # no regex needed
spec:
  ingressClassName: nginx
  rules:
    - host: devopsbox.local
      http:
        paths:
          # Backend API — keep full /api path
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devops-backend-service
                port:
                  number: 5000

          # Frontend SPA — catch everything else
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-frontend-service
                port:
                  number: 80
